--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>テスト</title>
+    <title></title>
   </head>
   <body>
-    test
     <div id="app">
     </div>
-    <script src="/js/app.js"></script>
   </body>
 </html>
