--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="app">
     </div>
+    <script type="text/javascript" src="/js/chunk-vendors.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
   </body>
 </html>
